criar a tela solicitação de compras